--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,3 +22,5 @@ jobs:
         name: get common
         command: |
           git clone "https://${GITHUB_ACCESS_TOKEN}:x-oauth-basic@github.com/Founder-Pro/founder-t1-account-batch.git"
+          cd founder-t1-account-batch
+          git checkout master
