--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,8 +21,9 @@ jobs:
     - run:
         name: get common
         command: |
+          git clone "https://${GITHUB_ACCESS_TOKEN}:x-oauth-basic@github.com/Founder-Pro/founder-t1-account-batch.git"
           cd founder-t1-account-batch
-          git checkout master
+          git checkout $CIRCLE_BRANCH
     - run:
         name: build batch-common
         command: |
